--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "request": "launch",
       "name": "Debug",
       "program": "${workspaceFolder}/cub3d",
-      "args": ["test.cub"],
+      "args": ["..cub"],
       "cwd": "${workspaceFolder}"
     }
   ]
