--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
 		"cub3d.h": "c",
 		"libft.h": "c",
 		"string.h": "c",
-		"mlx.h": "c"
+		"mlx.h": "c",
+		"get_next_line.h": "c",
+		"unistd.h": "c",
+		"iterator": "c"
 	}
 }
